# second-brain-hub

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  brain-tools-index.md  install.ps1
tools/py/: README.md  pyproject.toml
tools/py/scripts/: eval_people_trend.py  eval_people_trend_summary.py  generate_people_golden_candidates.py  relationship_deltas_report.py  v6_flip_roadmap_if_ready.py  v6_gate_report.py  v6_gate_watch.py  verify_ingest_dry_run.py  whatsapp_lid_residue_report.py
tools/py/src/brain_agents/: __init__.py  ask.py  asset_dedup.py  asset_migrate.py  asset_stats.py  (+36 more)
tools/py/tests/: ask_eval.yaml  conftest.py  eval_ask.py  eval_people.py  eval_text_inbox.py  eval_write.py  people_eval.yaml  people_eval_golden.yaml  people_eval_golden_candidates.yaml  smoke_people.py  test_asset_dedup.py  test_asset_migrate.py  test_asset_migrate_parity.py  test_asset_source_cleanup.py  test_asset_stats.py  test_audio_inbox.py  test_caps_d_dispatch_sync.py  test_cloud_flush.py  test_commitment_extract.py  test_contacts_ingest_ios_idempotent.py  test_contacts_ingest_ios_orphan_regression.py  test_context_graph_hints.py  test_digest.py  test_gmail_takeout_ingest.py  test_graph_poc.py  test_graph_staleness.py  test_identity_phone_normalize.py  test_identity_repair.py  test_image_inbox.py  test_ingest_backup.py  test_ingest_log.py  test_ios_backup_locator.py  test_mcp_readonly_tools.py  test_mcp_server.py  test_merge_candidates.py  test_merge_queue_config.py  test_merge_stale_cloud.py  test_merge_sync_from_graph.py  test_open_threads.py  test_people_cli.py  (+10 more)
(+104 files in other folders)
